--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
-    "sirv": "^2.0.4"
+    "sirv": "^2.0.4",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -25,9 +26,12 @@
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "cross-env": "^7.0.3",
+    "postcss": "^8.4.38",
+    "serve": "^14.2.1",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.3.3",
-    "vite": "^5.0.10",
-    "serve": "^14.2.1"
+    "vite": "^5.0.10"
   }
 }
